add jwt token
